chore(env): add Zod for environment variable validation

--- a/templates/.env.template
+++ b/templates/.env.template
@@ -1,2 +1,34 @@
+# Environment
+ENVIRONMENT=development
+
+# Secret
 TOKEN=
+
+# Config
 OWNER_ID=
+UNTOUCHABLE_USER_1=
+UNTOUCHABLE_USER_2=
+MAIN_GUILD= # ( Optional )
+MAIN_GUILD_OWNER=
+
+# Roles
+STAFF_ROLE=
+AUTO_ROLE=
+REGISTERED_ROLE=
+MORE_THAN_18_ROLE=
+LESS_THAN_18_ROLE=
+MALE_ROLE=
+FEMALE_ROLE=
+
+# Channels
+JOIN_CHANNEL=
+LEAVE_CHANNEL=
+LOGS_CHANNEL=
+REGISTER_LOGS_CHANNEL=
+MAIN_CHANNEL=
+MESSAGE_COUNT_CHANNEL=
+SUGGESTIONS_CHANNEL=
+REPORT_CHANNEL=
+INVITE_LOGS_CHANNEL=
+REVOKED_INVITE_LOGS_CHANNEL=
+
