--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.0",
     "fs": "^0.0.1-security",
     "ms": "^2.1.3",
-    "simple-json-db": "^2.0.0"
+    "simple-json-db": "^2.0.0",
+    "zod": "^4.0.5"
   }
 }
