--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.11.0",
+    "@google/genai": "1.10.0",
     "discord-html-transcripts": "^3.1.4",
     "discord.js": "^14.9.0",
     "dotenv": "^17.2.0",
